# rsync_to_remote

./: .gitignore  GUI_add_map.py  GUI_rsync_to_VM.py  GUI_rsync_to_remote.py  GUI_show_log.py  GUI_sync_suite.py  README.md  add_map.py  error_handler.py  file_map.yaml  preserve_comments.py  pyproject.toml  requirements.txt  rsync_to_remote.py  sync_conf.py  sync_conf.py.bak  sync_conf.yaml  sync_conf_test.yaml
sync_suite/: resize_icon.py
