[tool.poetry]
name = "rsync-to-vm"
version = "0.1.0"
description = ""
authors = ["Marek Paulik <marpauli@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^75.1.0"
pytimedinput = "^2.0.1"
pysimplegui-4-foss = "^4.60.4.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
